<resources>
    <string name="app_name">Home Doctor</string>
    <string name="emailhint">Enter Your Email</string>
    <string name="passwordhint">Enter Your Password</string>
    <string name="repasswordhint">Re-Enter Your Password</string>
    <string name="phonehint">Enter Your Phone</string>
    <string name="namehint">Enter Your Name</string>
    <string name="userbtn">User</string>
    <string name="doctorbtn">Doctor</string>
    <string name="registerbtn">Register</string>
    <string name="spinner_title">Account Type</string>
    <string name="rememberpassword">Remember Password</string>
    <string name="createnewaccount">Create new account</string>
    <string name="Signup">Signing Up . . .</string>

    <string name="Username">"User Name"</string>

    <string name="Submit">"Submit"</string>

    <string name="Glucose">Glucose</string>
    <string name="BloodPressure">Blood Pressure</string>
    <string name="Respire">Respiration Rate</string>
    <string name="Heart">Heart Rate</string>
    <string name="temp">Body Temperature</string>

    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
