<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/back_app"

    android:gravity="center_horizontal|center_vertical"
    tools:context="HomeDoctor.ui.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/logo"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/maillogin"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/emailhint"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edittextborder"
            android:textAlignment="center"
            android:drawableLeft="@drawable/ic_mail_white_24dp"
            android:drawablePadding="2dip"
            android:paddingLeft="10dip"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="@dimen/_20sdp"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_white_24dp"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordlogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/passwordhint"
                android:textAlignment="center"
                android:drawablePadding="2dip"
                android:paddingLeft="10dip"
                android:inputType="textPassword"
                android:background="@drawable/edittextborder"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="@dimen/_20sdp"
                android:gravity="center"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:ms_arrow_tint="@color/green"
            app:ms_text_color="@color/colorBlueMidnight"
            android:background="@drawable/edittextborder"
            app:ms_background_color="@android:color/white"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createnewaccount"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal|center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/loading_lyt"
        android:visibility="gone">

        <com.crystal.crystalpreloaders.widgets.CrystalPreloader
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:crs_pl_bg_color="@color/green"
            app:crs_pl_fg_color="@color/green"
            app:crs_pl_size="small"
            app:crs_pl_style="circular"/>
    </LinearLayout>

</FrameLayout>
