<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/back_app"
    android:gravity="center_horizontal|center_vertical|top"
    tools:context="HomeDoctor.ui.Register">


     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:weightSum="9">
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="96dp"
                 android:layout_height="0dp"
                 android:layout_weight="2"
                 android:src="@drawable/logo"
                 android:id="@+id/profilelogin"
                 android:layout_gravity="center_horizontal|center_vertical"
                 />

             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/mailRegister"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:hint="@string/emailhint"
                 android:layout_marginTop="@dimen/_20sdp"
                 android:background="@drawable/edittextborder"
                 android:textAlignment="center"
                 android:drawableLeft="@drawable/ic_mail_white_24dp"
                 android:drawablePadding="2dip"
                 android:paddingLeft="10dip"
                 android:inputType="textEmailAddress"
                 android:textColor="#fff"
                 android:textColorHint="#fff"
                 android:textSize="@dimen/_20sdp"
                 android:gravity="center"
                 />

             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:background="@drawable/edittextborder"
                 app:passwordToggleEnabled="true"
                 app:passwordToggleTint="@android:color/white"
                 android:layout_marginTop="@dimen/_10sdp"
                 app:hintEnabled="false"
                 android:textColorHint="@android:color/white">
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/passwordRegister"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/passwordhint"
                     android:textAlignment="center"
                     android:drawablePadding="2dip"
                     android:paddingLeft="10dip"
                     android:drawableStart="@drawable/ic_lock_white_24dp"
                     android:background="@drawable/edittextborder"
                     android:textSize="@dimen/_20sdp"
                     android:inputType="textPassword"
                     android:textColor="#fff"
                     android:textColorHint="#fff"
                     android:gravity="center"
                     />

             </com.google.android.material.textfield.TextInputLayout>

             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 app:hintEnabled="false"
                 app:passwordToggleEnabled="true"
                 app:passwordToggleTint="@android:color/white"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/edittextborder"
                 android:textColorHint="@android:color/white">
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/RepasswordRegister"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textSize="@dimen/_20sdp"
                     android:hint="@string/repasswordhint"
                     android:textAlignment="center"
                     android:drawableStart="@drawable/ic_lock_white_24dp"
                     android:drawablePadding="2dip"
                     android:paddingLeft="10dip"
                     android:background="@drawable/edittextborder"
                     android:inputType="textPassword"
                     android:textColor="#fff"
                     android:textColorHint="#fff"
                     android:gravity="center"
                     />

             </com.google.android.material.textfield.TextInputLayout>


             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/usernameRegister"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:textSize="@dimen/_20sdp"
                 android:background="@drawable/edittextborder"
                 android:hint="@string/namehint"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:drawableLeft="@drawable/ic_account_box_white_24dp"
                 android:drawablePadding="2dip"
                 android:paddingLeft="10dip"
                 android:textAlignment="center"
                 android:inputType="text"
                 android:textColor="#fff"
                 android:textColorHint="#fff"
                 android:gravity="center"
                 />

             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/phoneRegister"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:textSize="@dimen/_20sdp"
                 android:hint="@string/phonehint"
                 android:background="@drawable/edittextborder"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:drawableLeft="@drawable/ic_phone_white_24dp"
                 android:drawablePadding="2dip"
                 android:paddingLeft="10dip"
                 android:textAlignment="center"
                 android:inputType="numberDecimal"
                 android:textColor="#fff"
                 android:textColorHint="#fff"
                 android:gravity="center"
                 />

             <com.jaredrummler.materialspinner.MaterialSpinner
                 android:id="@+id/special_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight=".65"
                 android:layout_marginTop="@dimen/_10sdp"
                 app:ms_arrow_tint="@color/green"
                 app:ms_text_color="@color/colorBlueMidnight"
                 android:background="@drawable/edittextborder"
                 app:ms_background_color="@android:color/white"
                 />

         </LinearLayout>
         <LinearLayout
             android:id="@+id/loading_lyt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
             android:gravity="center">
             <com.crystal.crystalpreloaders.widgets.CrystalPreloader
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:crs_pl_style="circular"
                 app:crs_pl_bg_color="@color/green"
                 app:crs_pl_fg_color="@color/green"
                 />
         </LinearLayout>

     </FrameLayout>



</ScrollView>
